--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -29,8 +29,6 @@ jobs:
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Composer Dependencies
         run: composer install
-      - name: Install NPM Dependencies
-        run: npm install
       - name: Generate Key
         run: php artisan key:generate
       - name: Execute tests (Unit and Feature tests) via PHPUnit
@@ -46,10 +44,6 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v1
-      - name: NPM Build
-        run: |
-          npm install
-          npm run prod
       - name: Put built assets in Artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -62,15 +56,6 @@ jobs:
     if: github.ref == 'refs/heads/staging'
     steps:
       - uses: actions/checkout@v1
-      - name: NPM Build
-        run: |
-          npm install
-          npm run dev
-      - name: Put built assets in Artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: assets
-          path: public
   deploy-production:
     name: Deploy Project to PRODUCTION Server
     runs-on: ubuntu-latest
@@ -117,7 +102,7 @@ jobs:
           php-version: 7.3
           extension-csv: mbstring, bcmath
       - name: Composer install
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+        run: composer install
       - name: Setup Deployer
         uses: atymic/deployer-php-action@master
         with:
