--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "deployer/deployer": "^6.8",
+        "deployer/recipes": "^6.2",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "5.5.*",
