--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -24,7 +24,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 7.3
-          extension-csv: mbstring, bcmath
+          extensions: mbstring, bcmath
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Composer Dependencies
@@ -70,7 +70,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 7.3
-          extension-csv: mbstring, bcmath
+          extensions: mbstring, bcmath
       - name: Composer install
         run: composer install
       - name: Setup Deployer
@@ -93,7 +93,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 7.3
-          extension-csv: mbstring, bcmath
+          extensions: mbstring, bcmath
       - name: Composer install
         run: composer install
       - name: Setup Deployer
